[package]
name = "chat-tokio-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fallible = "0.1.3"
failure = "0.1.8"
tokio = {version="1.21.2", features = ["full"]}
serde = {version ="1", features = ["derive"]}

